Fixed logo and made the start button visible again
#start{
    position: absolute;
    bottom: 5000%;
    right: -380%;
}

Please don't add this ever again!

--- a/static/styles.css
+++ b/static/styles.css
@@ -6,10 +6,11 @@ html {
 body {
     color: white;
     background-color: #070F1C;
-    background-image: url("images/logo.svg");
+    background-image: url("/static/images/logo.svg");
+    background-size: 30%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: 85% 90%;
+    background-position: 90% 90%;
 }
 
 .container
@@ -47,12 +48,6 @@ body {
 
 .list-group-item{
     color: black
-}
-
-#start{
-    position: absolute;
-    bottom: 5000%;
-    right: -380%;
 }
 
 .card-title{
